--- a/themes/MLP_Gaming.theme.css
+++ b/themes/MLP_Gaming.theme.css
@@ -1,5 +1,5 @@
-//META{"name":"MLP_Gaming","description":"Mein selbst erstelltes Discord Theme im MLP Style (Have Fun) Links: <b><a href='https://www.youtube.com/channel/UCT_IcokbWNtFPgdzPm7vQow' target='_blank'>Youtube</a></b> | <b><a href='https://discord.gg/5exvwaB' target='_blank'>Discord</a></b> | <b><a href='' target='_blank'></a></b></span> <span style='position: absolute; bottom: 0; right: 14px;'>By <b><a href='' target='_blank'>FibeHD</a></b></span>","author":"<a href='' target='_blank'>FibeHD</a>","version":"1"}*//{}
-/* "MLP_Gaming - DiscordTheme v1" by FibeHD */
+//META{"name":"MLP_Gaming by Flush Do","description":"Discord Theme im MLP Style (Have Fun) Links: <b><a href='https://www.youtube.com/channel/UCT_IcokbWNtFPgdzPm7vQow' target='_blank'>Youtube</a></b> | <b><a href='https://discord.gg/5exvwaB' target='_blank'>Discord</a></b> | <b><a href='' target='_blank'></a></b></span> <span style='position: absolute; bottom: 0; right: 14px;'>By <b><a href='' target='_blank'>Flush Do</a></b></span>","author":"<a href='' target='_blank'>Flush Do</a>","version":"1.0"}*//{}
+/* "MLP_Gaming - DiscordTheme v1" by Flush Do */
 /* Based on "ClearVision v4" by @Zerthox */
 
 /* IMPORT CSS FROM GITHUB */
