--- a/themes/MLP_Gaming.theme.css
+++ b/themes/MLP_Gaming.theme.css
@@ -3,7 +3,7 @@
 /* Based on "ClearVision v4" by @Zerthox */
 
 /* IMPORT CSS FROM GITHUB */
-@import url(https://gitcdn.xyz/cdn/FibeHD/PonyCSS/8eb86515385199be7d21ad14dd018203609f22fc/css/MLP_Gaming.min.css);
+@import url(https://gitcdn.xyz/repo/FibeHD/PonyCSS/master/css/PonyCSS_v2.0.min.css);
 /*
 ---------------------------------------------------------------------------------------------------------------------------------------------
 IMPORTANT: CHANGE BETWEEN DARK AND LIGHT VERSION IN APPEARANCE SETTINGS!
