--- a/themes/Princess_Style.theme.css
+++ b/themes/Princess_Style.theme.css
@@ -1,9 +1,9 @@
-//META{"name":"Princess_Style","description":"Mein selbst erstelltes Discord Theme im MLP Style (Have Fun) Links: <b><a href='https://www.youtube.com/channel/UCT_IcokbWNtFPgdzPm7vQow' target='_blank'>Youtube</a></b> | <b><a href='https://discord.gg/5exvwaB' target='_blank'>Discord</a></b> | <b><a href='' target='_blank'></a></b></span> <span style='position: absolute; bottom: 0; right: 14px;'>By <b><a href='' target='_blank'>FibeHD</a></b></span>","author":"<a href='' target='_blank'>FibeHD</a>","version":"1"}*//{}
-/* "Princess_Style - DiscordTheme v1" by FibeHD */
+//META{"name":"Princess_Style","description":"Discord Theme im MLP Style (Have Fun) Links: <b><a href='https://www.youtube.com/channel/UCT_IcokbWNtFPgdzPm7vQow' target='_blank'>Youtube</a></b> | <b><a href='https://discord.gg/5exvwaB' target='_blank'>Discord</a></b> | <b><a href='' target='_blank'></a></b></span> <span style='position: absolute; bottom: 0; right: 14px;'>By <b><a href='' target='_blank'>Flush Do</a></b></span>","author":"<a href='' target='_blank'>Flush Do</a>","version":"1.0"}*//{}
+/* "Princess_Style - DiscordTheme v1" by Flush Do */
 /* Based on "ClearVision v4" by @Zerthox */
 
 /* IMPORT CSS FROM GITHUB */
-@import url(https://gitcdn.xyz/cdn/FibeHD/PonyCSS/526224762ad6dc8b3ba26bc59882997306d4d730/css/Princess_Style.min.css);
+@import url(https://gitcdn.xyz/repo/FibeHD/PonyCSS/master/css/PonyCSS_v2.0.min.css);
 /*
 ---------------------------------------------------------------------------------------------------------------------------------------------
 IMPORTANT: CHANGE BETWEEN DARK AND LIGHT VERSION IN APPEARANCE SETTINGS!
