--- a/themes/Princess_Style.theme.css
+++ b/themes/Princess_Style.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Princess_Style","description":"Discord Theme im MLP Style (Have Fun) Links: <b><a href='https://www.youtube.com/channel/UCT_IcokbWNtFPgdzPm7vQow' target='_blank'>Youtube</a></b> | <b><a href='https://discord.gg/5exvwaB' target='_blank'>Discord</a></b> | <b><a href='' target='_blank'></a></b></span> <span style='position: absolute; bottom: 0; right: 14px;'>By <b><a href='' target='_blank'>Flush Do</a></b></span>","author":"<a href='' target='_blank'>Flush Do</a>","version":"1.0"}*//{}
+//META{"name":"Princess_Style by Flush Do","description":"Discord Theme im MLP Style (Have Fun) Links: <b><a href='https://www.youtube.com/channel/UCT_IcokbWNtFPgdzPm7vQow' target='_blank'>Youtube</a></b> | <b><a href='https://discord.gg/5exvwaB' target='_blank'>Discord</a></b> | <b><a href='' target='_blank'></a></b></span> <span style='position: absolute; bottom: 0; right: 14px;'>By <b><a href='' target='_blank'>Flush Do</a></b></span>","author":"<a href='' target='_blank'>Flush Do</a>","version":"1.0"}*//{}
 /* "Princess_Style - DiscordTheme v1" by Flush Do */
 /* Based on "ClearVision v4" by @Zerthox */
 
