--- a/Themes/Vinyl_Theme by Flush Do.theme.css
+++ b/Themes/Vinyl_Theme by Flush Do.theme.css
@@ -1,9 +1,8 @@
-//META{"name":"Vinyl_Theme by Flush Do","description":" Discord Theme im DJ Pon3 Style (Have Fun) <span style='position: absolute; bottom: 0; left: 0;'>Links: <b><a href='https://www.youtube.com/channel/UCT_IcokbWNtFPgdzPm7vQow' target='_blank'>Youtube</a></b> | <b><a href='https://discord.gg/AbcU6WP' target='_blank'>Discord</a></b> | <b><a href='' target='_blank'></a></b></span> <span style='position: absolute; bottom: 0; right: 14px;'>By <b><a href='' target='_blank'>@Flush Do</a></b></span>","author":"<a href='' target='_blank'>@Flush Do</a>","version":"3.0"}*//{}
+//META{"name":"Vinyl_Theme by Flush Do","description":"Discord Theme with Vinyl Scratch","author":"Flush Do","version":"5"}*//{}
 /* Theme by Flush Do */
 
 /* IMPORT CSS FROM GITHUB */
 @import url(https://gitcdn.xyz/repo/FibeHD/PonyCSS/master/css/PonyCSS.min.css);
-
 /*
 ---------------------------------------------------------------------------------------------------------------------------------------------
 IMPORTANT: CHANGE BETWEEN DARK AND LIGHT VERSION IN APPEARANCE SETTINGS!
